--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,10 +1,14 @@
-<md-toolbar layout="row" layout-align="center center">
+<md-toolbar layout-gt-xs="row" layout-xs="column" layout-align="center center">
 
   <md-button href="#">WSN?</md-button>
 
-  <section flex layout="row" layout-align="left center">
+  <section flex layout-gt-xs="row" layout-xs="column" layout-align="left center">
     <md-button href="#/Rules" class="md-raised">Rules</md-button>
     <md-button href="#/Rosters" class="md-raised">Rosters</md-button>
     <md-button href="#/History" class="md-raised">History</md-button>
+  </section>
+
+  <section layout-gt-xs="row" layout-xs="column" layout-align="right center">
+    <md-button href="http://games.espn.go.com/ffl/clubhouse?leagueId=1262170" >ESPN</md-button>
   </section>
 </md-toolbar>
