--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -90,6 +90,10 @@ section.jumbotron {
   }
 }
 
+.position{
+  margin-left: 0.7em;
+}
+
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
