--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,10 +5,7 @@
       <acme-navbar></acme-navbar>
     </header>
 
-    <section class="jumbotron">
-      <h1>Who Says No?</h1>
-      <h4>A Dynasty Fantasy Football League</h4>
-    </section>
+
 
     <button class="md-icon-button md-button md-ink-ripple hide-gt-sm" type="button" ng-click="main.toggleLeft()"
             hide-gt-md aria-label="Toggle Menu">
@@ -27,8 +24,25 @@
         </md-list>
       </md-sidenav>
       <md-content flex>
-        <div layout="row" layout-align="center" layout-fill>
-          {{main.selectedTeam.title}}
+        <div layout="column" layout-align="center" layout-fill>
+          <section class="jumbotron" flex>
+            <h1>{{main.selectedTeam.title}}</h1>
+          </section>
+          <md-list>
+            <md-list-item class="md-3-line" ng-repeat="player in main.selectedTeam.players">
+              <md-card>
+                <md-card-title>
+                  <md-card-title-text>
+                    <span class="md-headline">{{player.name}}</span>
+                    <span class="md-subhead">{{ player.team }}</span>
+                  </md-card-title-text>
+                  <md-card-title-media>
+                    <span class="position">{{ player.position }}</span>
+                  </md-card-title-media>
+                </md-card-title>
+              </md-card>
+            </md-list-item>
+          </md-list>
         </div>
       </md-content>
     </div>
