--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,9 +3,8 @@
   <md-button href="#">WSN?</md-button>
 
   <section flex layout-gt-xs="row" layout-xs="column" layout-align="left center">
-    <md-button href="#/Rules" class="md-raised">Rules</md-button>
-    <md-button href="#/Rosters" class="md-raised">Rosters</md-button>
-    <md-button href="#/History" class="md-raised">History</md-button>
+    <md-button href="#/rules" class="md-raised">Rules</md-button>
+    <md-button href="#/history" class="md-raised">History</md-button>
   </section>
 
   <section layout-gt-xs="row" layout-xs="column" layout-align="right center">
